reading from ./data/

--- a/encode-bigwig-eda.ipynb
+++ b/encode-bigwig-eda.ipynb
@@ -45,11 +45,11 @@
    "source": [
     "# load dataFrame of bigWigs from ENCODE (encodeproject.org/), binned to 10kb resolution across chromosome 10.\n",
     "# note that the first three columns are chrom,start,end and the other columns are labeled by bigWig file accession.\n",
-    "df = pd.read_table('ENCODE_GRCh38_binned_subset.tsv')\n",
+    "df = pd.read_table('./data/ENCODE_GRCh38_binned_subset.tsv')\n",
     "\n",
     "# load metadata from ENCODE for bigwig files. \n",
     "# can be queried as follows: bigwig_metadata.query(\"`File accession`==@ df_column_name \")\n",
-    "bigwig_metadata = pd.read_table('./ENCODE_GRCh38_bigWig.tsv')"
+    "bigwig_metadata = pd.read_table('./data/ENCODE_GRCh38_bigWig.tsv')"
    ]
   },
   {
