--- a/encode-bigwig-eda.ipynb
+++ b/encode-bigwig-eda.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3c197bf3-c444-4a35-ace2-166bdbb117e4",
    "metadata": {},
    "outputs": [],
@@ -38,18 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "546f1f82-3fc4-41f2-8bac-ac946f303874",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_16521/3656987943.py:7: DtypeWarning: Columns (20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  bigwig_metadata = pd.read_table('/mnt/g/My Drive/Academics/QBIO_577/Week_8/qbio577_fall2022/data/ENCODE_GRCh38_bigWig_metadata.tsv')\n"
+     ]
+    }
+   ],
    "source": [
     "# load dataFrame of bigWigs from ENCODE (encodeproject.org/), binned to 10kb resolution across chromosome 10.\n",
     "# note that the first three columns are chrom,start,end and the other columns are labeled by bigWig file accession.\n",
-    "df = pd.read_table('./data/ENCODE_GRCh38_binned_subset.tsv')\n",
+    "df = pd.read_table('/mnt/g/My Drive/Academics/QBIO_577/Week_8/qbio577_fall2022/data/ENCODE_GRCh38_binned_subset.tsv')\n",
     "\n",
     "# load metadata from ENCODE for bigwig files. \n",
     "# can be queried as follows: bigwig_metadata.query(\"`File accession`==@ df_column_name \")\n",
-    "bigwig_metadata = pd.read_table('./data/ENCODE_GRCh38_bigWig.tsv')"
+    "bigwig_metadata = pd.read_table('/mnt/g/My Drive/Academics/QBIO_577/Week_8/qbio577_fall2022/data/ENCODE_GRCh38_bigWig_metadata.tsv')"
    ]
   },
   {
@@ -197,9 +206,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "open2c",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
-   "name": "open2c"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -211,7 +220,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a5887580c7cbb0fe8c117cf89484cb0db59155905523768f16ba2f70bd8e79c7"
+   }
   }
  },
  "nbformat": 4,
